--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     compile('com.twitter.sdk.android:twitter:1.13.0@aar') {
         transitive = true;
     }
+    compile 'joda-time:joda-time:2.9.3'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
