fixed config file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
 }
 
 dependencies {
@@ -69,4 +72,5 @@ dependencies {
     }
     compile 'joda-time:joda-time:2.9.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'org.projectlombok:lombok:1.16.8'
 }
