--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,12 +61,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
-    compile 'com.google.dagger:dagger:2.2'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'io.reactivex:rxjava:1.1.2'
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.google.android.agera:agera:1.0.0-RC1'
     compile('com.twitter.sdk.android:twitter:1.13.0@aar') {
         transitive = true;
     }
