--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,6 @@ dependencies {
     compile 'joda-time:joda-time:2.9.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.projectlombok:lombok:1.16.8'
+    compile 'org.parceler:parceler-api:1.1.2'
+    apt 'org.parceler:parceler:1.1.2'
 }
